--- a/css/theme.css
+++ b/css/theme.css
@@ -55,7 +55,7 @@ body {
 
 /* Padding for spacing */
 .inner {
-  padding: 30px;
+  /*padding: 30px;*/
 }
 
 
@@ -110,7 +110,7 @@ body {
  */
 
 .cover {
-  padding: 0 20px;
+ /* padding: 0 20px;*/
 }
 .cover .btn-lg {
   padding: 10px 20px;
