--- a/css/theme.css
+++ b/css/theme.css
@@ -35,17 +35,58 @@ body {
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
 
+.container-fluid {
+padding-right:0px;
+padding-left:0px;
+padding-top:10px;
+margin-top:20px;
+}
+
 .jumbotron{
     background: transparent;
 }
 
 .jumbotron p {
-font-size: 30px;
+font-size: 38px;
 }
 
-.chapter{
-background-image: url();
+#intro{
+background-image: url('../img/virupaksha-temple.JPG');
+background-size:cover;
+background-position-y:-28px;
+background-position-x:400px;
+background-attachment:fixed;
 }
 
+#chapter1  .wrap{
+text-align:justify;
+background:transparent;
+}
 
+#chapter2{
+background-image: url('../img/hazara-rama.jpg');
+background-size:cover;
+background-position-x:80px;
+background-attachment:fixed;
+}
+
+#chapter3{
+background-image: url('../img/chamundi-mysore.JPG');
+background-size:cover;
+background-attachment:fixed;
+
+
+}
+
+#chapter4{
+background-image: url('../img/devaragudda.JPG');
+background-size:cover;
+background-position-x:215px;
+background-position-y:-170px;
+background-attachment:fixed;
+}
+
+.wrap{
+background:#000;
+}
 
