--- a/css/theme.css
+++ b/css/theme.css
@@ -6,17 +6,17 @@
 a,
 a:focus,
 a:hover {
-  color: #fff;
+    color: #fff;
 }
 
 /* Custom default button */
 .btn-default,
 .btn-default:hover,
 .btn-default:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #fff;
-  border: 1px solid #fff;
+    color: #333;
+    text-shadow: none; /* Prevent inheritence from `body` */
+    background-color: #fff;
+    border: 1px solid #fff;
 }
 
 
@@ -26,20 +26,20 @@ a:hover {
 
 html,
 body {
-  height: 100%;
-  background-color: #333;
+    height: 100%;
+    background-color: #333;
 }
 body {
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
+    color: #fff;
+    text-align: center;
+    text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
 
 .container-fluid {
-padding-right:0px;
-padding-left:0px;
-padding-top:10px;
-margin-top:20px;
+    padding-right:0px;
+    padding-left:0px;
+    padding-top:10px;
+    margin-top:20px;
 }
 
 .jumbotron{
@@ -47,57 +47,57 @@ margin-top:20px;
 }
 
 .jumbotron p {
-font-size: 38px;
+    font-size: 38px;
 }
 
 #intro{
-background-image: url('../img/virupaksha-temple.JPG');
-background-size:cover;
+    background-image: url('../img/virupaksha-temple.JPG');
+    background-size:cover;
 
-background-position:400px -28px  !important;
-background-attachment:fixed;
+    background-position:400px -28px  !important;
+    background-attachment:fixed;
 }
 
 .mapRow {
-height:200vh;
-background-image:url('../img/hampi-map-vintage.jpg');
-background-size:cover;
-background-position:-30px 0px;
-background-attachment:fixed;
+    height:200vh;
+    background-image:url('../img/hampi-map-vintage.jpg');
+    background-size:cover;
+    background-position:-30px 0px;
+    background-attachment:fixed;
 }
 
 #chapter1  .wrap{
-text-align:justify;
-background:transparent;
+    text-align:justify;
+    background:transparent;
 }
 
 #chapter2{
-background-image: url('../img/hazara-rama.jpg');
-background-size:cover;
-background-position:80px 0px;
-background-attachment:fixed;
+    background-image: url('../img/hazara-rama.jpg');
+    background-size:cover;
+    background-position:80px 0px;
+    background-attachment:fixed;
 }
 
 #chapter3{
-background-image: url('../img/chamundi-mysore.jpg');
-background-size:cover;
-background-attachment:fixed;
-background-position:170px 50px !important;
+    background-image: url('../img/chamundi-mysore.jpg');
+    background-size:cover;
+    background-attachment:fixed;
+    background-position:170px 50px !important;
 
 }
 
 #chapter4{
-background-image: url('../img/devaragudda.JPG');
-background-size:cover;
-background-position-x:215px -170px !important;
+    background-image: url('../img/devaragudda.JPG');
+    background-size:cover;
+    background-position-x:215px -170px !important;
 
-background-attachment:fixed;
+    background-attachment:fixed;
 }
 
 .wrap{
-background:#000;
-text-align: justify;
-margin-left:10px;
+    background:#000;
+    text-align: justify;
+    margin-left:10px;
 }
 
 .story-image {
@@ -121,4 +121,25 @@ margin-left:10px;
     right: -55px;
 
     z-index:1032;
+}
+div.row div {
+    width: 250px;
+    height: auto;
+    padding: 0;
+    opacity: 0;
+    bottom: 0px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border:1px solid red;
+    top: -100px;
+    transition-duration: 0.4s;
+
+}
+
+div.row:hover .snipit {
+    opacity: 1;
+}
+
+#modal-content, #modal-content a{
+    color: #000;
+    text-shadow: none;
 }
