--- a/css/theme.css
+++ b/css/theme.css
@@ -107,6 +107,7 @@ body {
     height: auto;
     width: 100%;
     border: 3px solid #ccc;
+    cursor: pointer;
 }
 #lightbox .modal-content {
     display: inline-block;
