--- a/css/theme.css
+++ b/css/theme.css
@@ -154,3 +154,6 @@ div.row:hover .snipit {
 body .modal-open {
     margin-right: 0px;
 }
+q { quotes: '"' '"' "'" "'" }
+q:before { content: open-quote }
+q:after  { content: close-quote }
