--- a/css/theme.css
+++ b/css/theme.css
@@ -101,8 +101,21 @@ body {
     text-align: justify;
     margin-left:25px;
     font-size:20px;
+    padding-bottom:15px;
+    padding-top:15px;
+}
+.modal-content {
+  background-color: #424242;
 }
 
+.aboutRestory {
+  border-left:1px solid #ccc;
+  font-size:12px;
+  margin-top:10px;
+  height:28px;
+}
+
+}
 .story-image {
     height: auto;
     width: 100%;
@@ -163,5 +176,6 @@ q:after  { content: close-quote }
 
 
 .footer {
-  font-size:15px;
+  font-size:16px;
+  margin-top:-15px;
 }
