--- a/css/theme.css
+++ b/css/theme.css
@@ -142,13 +142,14 @@ body {
 }
 
 .snipit {
-    height: 120px;
+    height: 75px;
     margin-bottom:-100px;
     opacity: 0;
     background-color: rgba(0, 0, 0, 0.5);
     border:1px solid #ccc;
+    font-size:14px;
     position:relative;
-    top: -124px;
+    top: -75px;
     transition-duration: 0.4s;
 
 }
@@ -178,13 +179,19 @@ div.row:hover .info-icon {
 div.row:hover .snipit {
     opacity: 1;
 }
+
+
 .fullscreen-icon{
   position:relative;
   top:23px;
   width:30px;
   background-color:rgba(0, 0, 0, 0.5);
   height:22px;
-  padding-right:6px;
+  padding-left:5px;
+  opacity:0;
+}
+div.row:hover .fullscreen-icon {
+  opacity:1;
 }
 
 #modal-content, #modal-content a{
